k8s/nginx/raw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-raw-proxy
  namespace: upptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-raw-proxy
  template:
    metadata:
      labels:
        app: nginx-raw-proxy
    spec:
      nodeSelector:
        nodepool: development
      tolerations:
      - key: "nodepool"
        operator: "Equal"
        value: "development"
        effect: "NoSchedule"
      containers:
      # Nginx container for api.github.com
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: api-port
        resources:
          limits:
            cpu: "50m"
            memory: "32Mi"
          requests:
            cpu: "50m"
            memory: "32Mi"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        emptyDir: {}
      - name: secret-volume
        secret:
          secretName: proxy-secrets
